// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chord should render a half note 1`] = `
Array [
  <ellipse
    className="note__head"
    cx={15}
    cy={74}
    fill="white"
    mask="url(#hollowNoteHeadMaskLEFT)"
    rx={15}
    ry={11}
    strokeWidth={0}
  />,
  <rect
    className="staff__line"
    height={91}
    width={4}
    x={27}
    y={-19}
  />,
]
`;

exports[`Chord should render a single Note 1`] = `
Array [
  <ellipse
    className="note__head"
    cx={15}
    cy={74}
    fill="white"
    rx={15}
    ry={11}
    strokeWidth={0}
  />,
  <rect
    className="staff__line"
    height={91}
    width={4}
    x={27}
    y={-19}
  />,
]
`;

exports[`Chord should render two adjacent nodes as neighbors 1`] = `
Array [
  <ellipse
    className="note__head"
    cx={15}
    cy={122}
    fill="white"
    rx={15}
    ry={11}
    strokeWidth={0}
  />,
  <ellipse
    className="note__head"
    cx={15}
    cy={74}
    fill="white"
    rx={15}
    ry={11}
    strokeWidth={0}
  />,
  <rect
    className="staff__line"
    height={151}
    width={4}
    x={27}
    y={65}
  />,
  <ellipse
    className="note__head"
    cx={43}
    cy={62}
    fill="white"
    rx={15}
    ry={11}
    strokeWidth={0}
  />,
]
`;

exports[`Chord should use the stem side of the top-most node for the entire chord 1`] = `
Array [
  <rect
    className="staff__line"
    height={223}
    width={4}
    x={0}
    y={-7}
  />,
  <ellipse
    className="note__head"
    cx={16}
    cy={122}
    fill="white"
    rx={15}
    ry={11}
    strokeWidth={0}
  />,
  <rect
    className="staff__line"
    height="1"
    width={40}
    x={-4}
    y={-10}
  />,
  <ellipse
    className="note__head"
    cx={16}
    cy={-10}
    fill="white"
    rx={15}
    ry={11}
    strokeWidth={0}
  />,
]
`;

exports[`Staff should render a half note 1`] = `
Array [
  <ellipse
    className="note__head"
    cx={15}
    cy={74}
    fill="white"
    mask="url(#hollowNoteHeadMaskLEFT)"
    rx={15}
    ry={11}
    strokeWidth={0}
  />,
  <rect
    className="staff__line"
    height={91}
    width={4}
    x={27}
    y={-19}
  />,
]
`;

exports[`Staff should render a single chord 1`] = `
<div
  className="staff"
>
  <svg
    className="staff"
    height="300"
    width={250}
    xmlns="http://www.w3.org/2000/svg"
  >
    <mask
      id="hollowNoteHeadMaskLEFT"
      maskContentUnits="objectBoundingBox"
      maskUnits="objectBoundingBox"
    >
      <rect
        fill="white"
        height="1"
        width="1"
        x="0"
        y="0"
      />
      <ellipse
        cx=".5"
        cy=".5"
        fill="black"
        rx=".25"
        ry=".4"
        transform="rotate(40, .5, .5)"
      />
    </mask>
    <mask
      id="hollowNoteHeadMaskRIGHT"
      maskContentUnits="objectBoundingBox"
      maskUnits="objectBoundingBox"
    >
      <rect
        fill="white"
        height="1"
        width="1"
        x="0"
        y="0"
      />
      <ellipse
        cx=".5"
        cy=".5"
        fill="black"
        rx=".25"
        ry=".4"
        transform="rotate(-40, .5, .5)"
      />
    </mask>
    <symbol
      height={30}
      id="sharp"
      viewBox="0 0 10 20"
      width={40}
    >
      <g
        className="sharp"
        stroke="white"
        strokeWidth={2.5}
      >
        <line
          strokeWidth={1.5}
          x1={2}
          x2={2}
          y1={1}
          y2={20}
        />
        <line
          strokeWidth={1.5}
          x1={8}
          x2={8}
          y1={0}
          y2={19}
        />
        <line
          strokeWidth={3.5}
          x1={0}
          x2={10}
          y1={6}
          y2={3}
        />
        <line
          strokeWidth={3.5}
          x1={0}
          x2={10}
          y1={16}
          y2={13}
        />
      </g>
    </symbol>
    <rect
      className="staff__line"
      height="1"
      width={250}
      x={0}
      y={14}
    />
    <rect
      className="staff__line"
      height="1"
      width={250}
      x={0}
      y={38}
    />
    <rect
      className="staff__line"
      height="1"
      width={250}
      x={0}
      y={62}
    />
    <rect
      className="staff__line"
      height="1"
      width={250}
      x={0}
      y={86}
    />
    <rect
      className="staff__line"
      height="1"
      width={250}
      x={0}
      y={110}
    />
    <ellipse
      className="note__head"
      cx={15}
      cy={74}
      fill="white"
      rx={15}
      ry={11}
      strokeWidth={0}
    />
    <rect
      className="staff__line"
      height={91}
      width={4}
      x={27}
      y={-19}
    />
  </svg>
</div>
`;

exports[`Staff should render empty staff 1`] = `
<div
  className="staff"
>
  <svg
    className="staff"
    height="300"
    width={100}
    xmlns="http://www.w3.org/2000/svg"
  >
    <mask
      id="hollowNoteHeadMaskLEFT"
      maskContentUnits="objectBoundingBox"
      maskUnits="objectBoundingBox"
    >
      <rect
        fill="white"
        height="1"
        width="1"
        x="0"
        y="0"
      />
      <ellipse
        cx=".5"
        cy=".5"
        fill="black"
        rx=".25"
        ry=".4"
        transform="rotate(40, .5, .5)"
      />
    </mask>
    <mask
      id="hollowNoteHeadMaskRIGHT"
      maskContentUnits="objectBoundingBox"
      maskUnits="objectBoundingBox"
    >
      <rect
        fill="white"
        height="1"
        width="1"
        x="0"
        y="0"
      />
      <ellipse
        cx=".5"
        cy=".5"
        fill="black"
        rx=".25"
        ry=".4"
        transform="rotate(-40, .5, .5)"
      />
    </mask>
    <symbol
      height={30}
      id="sharp"
      viewBox="0 0 10 20"
      width={40}
    >
      <g
        className="sharp"
        stroke="white"
        strokeWidth={2.5}
      >
        <line
          strokeWidth={1.5}
          x1={2}
          x2={2}
          y1={1}
          y2={20}
        />
        <line
          strokeWidth={1.5}
          x1={8}
          x2={8}
          y1={0}
          y2={19}
        />
        <line
          strokeWidth={3.5}
          x1={0}
          x2={10}
          y1={6}
          y2={3}
        />
        <line
          strokeWidth={3.5}
          x1={0}
          x2={10}
          y1={16}
          y2={13}
        />
      </g>
    </symbol>
    <rect
      className="staff__line"
      height="1"
      width={100}
      x={0}
      y={14}
    />
    <rect
      className="staff__line"
      height="1"
      width={100}
      x={0}
      y={38}
    />
    <rect
      className="staff__line"
      height="1"
      width={100}
      x={0}
      y={62}
    />
    <rect
      className="staff__line"
      height="1"
      width={100}
      x={0}
      y={86}
    />
    <rect
      className="staff__line"
      height="1"
      width={100}
      x={0}
      y={110}
    />
  </svg>
</div>
`;
